extract identical sections to _includes